feat: implement integration of dashoard services in reactive components
